# digital-analysis-of-fingerprints

./: CMakeLists.txt  README.md
demo/demo/: CMakeLists.txt  anisotropic_demo.cpp  convolution_demo.cpp  isotropic_demo.cpp  morphological_demo.cpp  opti_demo.cpp  rectangle_demo.cpp  rotation_demo.cpp  sym_demo.cpp
docs/: CMakeLists.txt  doxyfilerc
docs/html/: annotated.html  classImage-members.html  classImage.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  index.html  main_8h.html  main_8h_source.html  main__1_8cpp.html  main__2_8cpp.html  main__3_8cpp.html  main__4_8cpp.html  main__5_8cpp.html  starter__1_8cpp.html  starter__2_8cpp.html  starter__3_8cpp.html  starter__4_8cpp.html  starter__5_8cpp.html
docs/html/search/: all_61.js  all_62.js  all_64.js  all_69.js  all_6d.js  all_73.js  all_74.js  all_77.js  files_6d.js  files_73.js  functions_63.js  functions_65.js  functions_66.js  functions_69.js  functions_6b.js  functions_6c.js  functions_6d.js  functions_6f.js  functions_72.js  functions_73.js  functions_78.html  functions_78.js  search.js
include/include/: main.h
src/src/: CMakeLists.txt  main_1.cpp  main_2.cpp  main_3.cpp  main_4.cpp  main_5.cpp  starter_1.cpp  starter_2.cpp  starter_3.cpp  starter_4.cpp  starter_5.cpp
tests/: CMakeLists.txt
